--- a/index.html
+++ b/index.html
@@ -3,10 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Library</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <button class="js-theme-btn">Colorful</button>
+        <button class="js-theme-btn">Greyscale</button>
+    </header>
+    <div class="content">
+        
+        <div class="title-container">
+            <div></div>
+            <div>
+                <h2>Library</h2>
+            </div>
+            <div>
+                <button class="js-add-book-btn">Add new book +</button>
+            </div>
+        </div>
+        <div class="library-container">
+            <div class="empty-message-container">
+                <div>
+                    <h3 class="font-size-big">Your library is empty!</h3>
+                </div>
+                <div>
+                    <h4 class="font-size-medium medium-bold">Add your first book</h4>
+                    <button class="circle-add-btn"></button>
+                </div>
+                <div>
+                    <button class="example-button font-size-regular">...or load example library</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>Developed by Darion Valdez</footer>
 </body>
 </html>
