change add first book button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <button class="js-theme-btn">Colorful</button>
-        <button class="js-theme-btn">Greyscale</button>
+        <button class="theme-btn">Colorful</button>
+        <button class="theme-btn">Greyscale</button>
     </header>
     <div class="content">
         
@@ -23,7 +23,7 @@
                 <h2>Library</h2>
             </div>
             <div>
-                <button class="js-add-book-btn">Add new book +</button>
+                <button class="add-book-btn">Add new book +</button>
             </div>
         </div>
         <div class="library-container">
@@ -31,9 +31,9 @@
                 <div>
                     <h3 class="font-size-big">Your library is empty!</h3>
                 </div>
-                <div>
-                    <h4 class="font-size-medium medium-bold">Add your first book</h4>
-                    <button class="circle-add-btn"></button>
+                <img src="images/platypus.webp" alt="platypus reading a book" height="160px" width="160px">
+                <div class="add-button-container">
+                    <button class="add-first-book-btn font-size-regular">Add your first book</button>
                 </div>
                 <div>
                     <button class="example-button font-size-regular">...or load example library</button>
