add style to library page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             </div>
         </div>
         <div class="library-container">
-            <div class="empty-message-container">
+
+            <!-- only shows when library is empty -->
+            <div class="empty-message-container js-empty-message hidden">
                 <div>
                     <h3 class="font-size-big">Your library is empty!</h3>
                 </div>
@@ -39,6 +41,56 @@
                     <button class="example-button font-size-regular">...or load example library</button>
                 </div>
             </div>
+            <!-- -------------------------------- -->
+
+            <div class="grid-container">
+                <div class="card">
+                    <div class="bold">
+                        Frankenstein
+                        <img src="images/check-circle.svg" alt="check mark" height="32px" width="32px" class="check-mark">
+                    </div>
+                    <div class="font-size-small faded">Mary Shelley</div>
+                    <div>
+                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
+                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
+                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
+                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
+                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
+                    </div>
+                    <div class="font-size-small faded">Delete</div>
+                </div>
+                <div class="card">
+                    <div>Title</div>
+                    <div>Author</div>
+                    <div>Rating</div>
+                    <div>Delete</div>
+                </div>
+                <div class="card">
+                    <div>Title</div>
+                    <div>Author</div>
+                    <div>Rating</div>
+                    <div>Delete</div>
+                </div>
+                <div class="card">
+                    <div>Title</div>
+                    <div>Author</div>
+                    <div>Rating</div>
+                    <div>Delete</div>
+                </div>
+                <div class="card">
+                    <div>Title</div>
+                    <div>Author</div>
+                    <div>Rating</div>
+                    <div>Delete</div>
+                </div>
+                <div class="card">
+                    <div>Title</div>
+                    <div>Author</div>
+                    <div>Rating</div>
+                    <div>Delete</div>
+                </div>
+            </div>
+
         </div>
     </div>
     <footer>Developed by Darion Valdez</footer>
