--- a/index.html
+++ b/index.html
@@ -23,10 +23,31 @@
                 <h2>Library</h2>
             </div>
             <div>
-                <button class="add-book-btn">Add new book +</button>
+                <button class="add-book-btn js-add-book-btn">Add new book +</button>
             </div>
         </div>
         <div class="library-container js-library">
+
+            <div class="modal js-modal font-size-regular">
+                <h3 class="medium-bold">New book</h3>
+                <label for="title">Title</label>
+                <input type="text" id="title">
+                <label for="author">Author</label>
+                <input type="text" id="author">
+                <h4 class="font-size-regular">Your rating</h4>
+                <div class="star-container"></div>
+                <label for="radio-yes">Have you read this book?</label>
+                <div>
+                    <label for="radio-yes">Yes</label>
+                    <input type="radio" name="has-read" id="radio-yes" class="radio">
+                    <label for="radio-yes">No</label>
+                    <input type="radio" name="has-read" id="radio-no" class="radio">
+                </div>
+                <div>
+                    <button class="faded font-size-regular js-delete-btn">Cancel</button>
+                    <button class="medium-bold font-size-regular">Add book</button>
+                </div>
+            </div>
 
             <!-- only shows when library is empty -->
             <div class="empty-message-container js-empty-message hidden">
@@ -45,24 +66,7 @@
 
             <div class="mark-as-read js-mark-as-read font-size-small">Mark as read</div>
 
-            <div class="grid-container js-grid-container">
-                <!-- <div class="card">
-                    <div class="bold">
-                        Frankenstein
-                        <img src="images/check-circle.svg" alt="check mark" height="32px" width="32px" class="check-mark">
-                    </div>
-                    <div class="font-size-small faded">Mary Shelley</div>
-                    <div>
-                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
-                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
-                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
-                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
-                        <img src="images/star.svg" alt="grey-star" width="24px" height="24px">
-                    </div>
-                    <div class="font-size-small faded">Delete</div>
-                </div> -->
-            </div>
-
+            <div class="grid-container js-grid-container"></div>
         </div>
     </div>
     <footer>Developed by Darion Valdez</footer>
