--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
         </div>
         <div class="library-container js-library">
 
-            <div class="modal js-modal font-size-regular">
+            <form class="modal js-modal font-size-regular">
                 <h3 class="medium-bold">New book</h3>
                 <label for="title">Title</label>
-                <input type="text" id="title">
+                <input type="text" id="title" required>
                 <label for="author">Author</label>
-                <input type="text" id="author">
+                <input type="text" id="author" name="author">
                 <h4 class="font-size-regular">Your rating</h4>
                 <div class="star-container"></div>
                 <label for="radio-yes">Have you read this book?</label>
                 <div>
                     <label for="radio-yes">Yes</label>
-                    <input type="radio" name="has-read" id="radio-yes" class="radio">
+                    <input type="radio" name="has-read" id="radio-yes" class="radio" checked>
                     <label for="radio-yes">No</label>
                     <input type="radio" name="has-read" id="radio-no" class="radio">
                 </div>
                 <div>
-                    <button class="faded font-size-regular js-delete-btn">Cancel</button>
-                    <button class="medium-bold font-size-regular">Add book</button>
+                    <button class="faded font-size-regular js-delete-btn" type="button">Cancel</button>
+                    <button class="medium-bold font-size-regular" type="submit" id="submit-btn">Add book</button>
                 </div>
-            </div>
+            </form>
 
             <!-- only shows when library is empty -->
             <div class="empty-message-container js-empty-message hidden">
