add empty library message functionality

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             </form>
 
             <!-- only shows when library is empty -->
-            <div class="empty-message-container js-empty-message hidden">
+            <div class="empty-message-container js-empty-message">
                 <div>
                     <h3 class="font-size-big">Your library is empty!</h3>
                 </div>
                 <img src="images/platypus.webp" alt="platypus reading a book" height="160px" width="160px">
                 <div class="add-button-container">
-                    <button class="add-first-book-btn font-size-regular">Add your first book</button>
+                    <button class="add-first-book-btn font-size-regular js-add-first-book-btn">Add your first book</button>
                 </div>
                 <div>
                     <button class="example-button font-size-regular">...or load example library</button>
