remove editable title and author

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <button class="add-first-book-btn font-size-regular js-add-first-book-btn">Add your first book</button>
                 </div>
                 <div>
-                    <button class="example-button font-size-regular">...or load example library</button>
+                    <button class="example-button font-size-regular js-example-button">...or load example library</button>
                 </div>
             </div>
             <!-- -------------------------------- -->
