--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <label for="title">Title</label>
                 <input type="text" id="title" required>
                 <label for="author">Author</label>
-                <input type="text" id="author" name="author">
+                <input type="text" id="author" name="author" required>
                 <h4 class="font-size-regular">Your rating</h4>
                 <div class="star-container"></div>
                 <label for="radio-yes">Have you read this book?</label>
