--- a/index.html
+++ b/index.html
@@ -32,12 +32,9 @@
                 <input type="text" id="author" name="author" required>
                 <h4 class="font-size-regular">Your rating</h4>
                 <div class="star-container"></div>
-                <label for="radio-yes">Have you read this book?</label>
                 <div>
-                    <label for="radio-yes">Yes</label>
-                    <input type="radio" name="has-read" id="radio-yes" class="radio" checked>
-                    <label for="radio-yes">No</label>
-                    <input type="radio" name="has-read" id="radio-no" class="radio">
+                    <label for="checkbox-has-read">I have read this book</label>
+                    <input type="checkbox" name="has-read" id="checkbox-has-read" class="checkbox"/>
                 </div>
                 <div>
                     <button class="faded font-size-regular js-delete-btn" type="button">Cancel</button>
