add credits link

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="grid-container js-grid-container"></div>
         </div>
     </div>
-    <footer>Developed by Darion Valdez</footer>
+    <footer>
+        <a href="https://github.com/DarionV/library" target="_blank">Developed by Darion Valdez</a></footer>
 </body>
 </html>
