--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <!-- -------------------------------- -->
 
-            <div class="mark-as-read js-mark-as-read font-size-small">Mark as read</div>
+            <div class="mark-as-read js-tooltip font-size-small">Mark as read</div>
 
             <div class="grid-container js-grid-container"></div>
         </div>
